cluster/christopherjmiller/personalsite.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  namespace: christopherjmiller
  labels:
    app: mysite
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      namespace: christopherjmiller
      labels:
        app: mysite
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
        - name: mysite
          image: ghcr.io/christopherjmiller/chrismiller.xyz:0.0.5@sha256:c02c1510647735304a8250f4c034d2c0925b8096e4cf3afc133ae8ee9191bd84
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [/usr/sbin/nginx, -s, quit]
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/cache/nginx
              name: cache
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: mysite
  namespace: christopherjmiller
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: mysite
