cluster/christopherjmiller/thirsty-psql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: thirsty-db-endpoint
  namespace: christopherjmiller
  annotations:
    external-dns.alpha.kubernetes.io/hostname: db.thirsty.chrismiller.xyz
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: psql
  selector:
    cluster-name: acid-thirsty-database
  type: LoadBalancer
