cluster/christopherjmiller/bng-mc-info.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bng-mc-info
  namespace: christopherjmiller
  labels:
    app: bng-mc-info
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bng-mc-info
  template:
    metadata:
      namespace: christopherjmiller
      labels:
        app: bng-mc-info
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: home
          image: quay.io/christopherjmiller/bng-mc-info:3.1@sha256:a0f639d7617548c075a5d658c0d3388e921e5c6f7b7b0913d8203c54bf957a2f
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [/usr/sbin/nginx, -s, quit]
---
apiVersion: v1
kind: Service
metadata:
  name: bng-mc-info
  namespace: christopherjmiller
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: bng-mc-info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bng-mc-info
  namespace: christopherjmiller
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mc.brokenneckgang.com
      secretName: bng-mc-tls
  rules:
    - host: mc.brokenneckgang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bng-mc-info
                port:
                  number: 80
