cluster/christopherjmiller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrismillerxyz
  namespace: christopherjmiller
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - chrismiller.xyz
        - www.chrismiller.xyz
      secretName: chrismillerxyz-tls
  rules:
    - host: chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite
                port:
                  number: 80
    - host: www.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite
                port:
                  number: 80
